--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "next": "12.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "next-seo": "^4.29.0",
+    "nookies": "^2.5.2",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
+    "styled-components": "^5.3.3",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^1.9.5"
   }
 }
